Extends documents reader and update AWS sdk to v2